# rs-retry

./: .cargo-audit.toml.example  .gitignore  .qubit-style-allowlist  .rs-ci-cargo-matrix.json  Cargo.toml  README.md  README.zh_CN.md  ci-check.sh  coverage.sh
doc/: retry_redesign.zh_CN.md
src/: constants.rs  delay.rs  error.rs  events.rs  failure_action.rs  jitter.rs  lib.rs  retry_executor.rs  retry_executor_builder.rs  retry_options.rs
src/error/: attempt_executor_error.rs  attempt_failure.rs  attempt_panic.rs  error_classifier.rs  mod.rs  retry_attempt_failure.rs  retry_config_error.rs  retry_error.rs  retry_error_classifier.rs  retry_error_reason.rs  retry_failure_action.rs
src/event/: attempt_failure_decision.rs  attempt_failure_listener.rs  attempt_success_listener.rs  attempt_timeout_source.rs  before_attempt_listener.rs  listeners.rs  mod.rs  retry_abort_context.rs  retry_after_hint.rs  retry_attempt_context.rs  retry_context.rs  retry_context_parts.rs  retry_decision.rs  retry_error_listener.rs  retry_events.rs  retry_failure_context.rs  retry_listeners.rs  retry_success_context.rs
src/events/: abort_event.rs  attempt_context.rs  failure_event.rs  listeners.rs  retry_event.rs  success_event.rs
src/executor/: async_retry_runner.rs  attempt.rs  attempt_cancel_token.rs  blocking_attempt.rs  blocking_attempt_outcome.rs  blocking_attempt_runner.rs  blocking_value_operation.rs  effective_attempt_timeout.rs  mod.rs  retry.rs  retry_builder.rs  retry_executor.rs  retry_executor_builder.rs  retry_failure_handler.rs  retry_failure_policy.rs  retry_flow_state.rs  retry_runner.rs  sync_retry_runner.rs  value_operation.rs  worker_attempt_executor.rs  worker_retry_runner.rs
src/options/: attempt_timeout_option.rs  attempt_timeout_policy.rs  effective_attempt_timeout.rs  mod.rs  parse_retry_jitter_error.rs  retry_config_values.rs  retry_delay.rs  retry_jitter.rs  retry_options.rs
tests/: builder_tests.rs  executor_tests.rs  lib_tests.rs
tests/coverage/: coverage_support_tests.rs
tests/delay/: delay_tests.rs  mod.rs  retry_delay_tests.rs
tests/error/: attempt_executor_error_tests.rs  attempt_failure_tests.rs  attempt_panic_tests.rs  mod.rs  retry_config_error_tests.rs  retry_error_tests.rs
tests/event/: attempt_failure_decision_tests.rs  mod.rs  retry_abort_context_tests.rs  retry_attempt_failure_ref_tests.rs  retry_context_parts_tests.rs  retry_context_tests.rs  retry_failure_context_tests.rs  retry_listeners_tests.rs  retry_success_context_tests.rs
tests/events/: attempt_failure_ref_tests.rs  mod.rs
tests/executor/: async_attempt_tests.rs  async_value_operation_tests.rs  attempt_cancel_token_tests.rs  attempt_tests.rs  blocking_attempt_message_tests.rs  blocking_attempt_outcome_tests.rs  blocking_attempt_runner_tests.rs  blocking_value_operation_tests.rs  effective_attempt_timeout_tests.rs  mod.rs  retry_async_tests.rs  retry_builder_tests.rs  retry_executor_builder_tests.rs  retry_executor_tests.rs  retry_flow_action_tests.rs  retry_tests.rs  (+8 more)
(+15 files in other folders)
