[package]
name = "qubit-retry"
version = "0.13.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-retry"
description = "Retry module, providing a feature-complete, type-safe retry management system with support for multiple delay strategies and event listeners"
homepage = "https://github.com/qubit-ltd/rs-retry"
documentation = "https://docs.rs/qubit-retry"
readme = "README.md"
keywords = ["retry", "resilience", "backoff", "fault-tolerance", "qubit"]
categories = ["development-tools", "asynchronous"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_retry"

[features]
default = []
tokio = ["dep:tokio"]
config = ["dep:qubit-config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
parse-display = "0.11"
tokio = { version = "1.52", features = ["time", "rt"], optional = true }
rand = "0.10"

qubit-datatype = "0.2"
qubit-error = "0.2"
qubit-serde = "0.2"
qubit-config = { version = "0.13", optional = true }
qubit-function = "0.14"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.52", features = ["full", "test-util"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
